Adding prefrence Screen

--- a/app/src/main/res/layout/activity_cast_profile.xml
+++ b/app/src/main/res/layout/activity_cast_profile.xml
@@ -16,8 +16,9 @@
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profilePhoto"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/image_logo_height"
-                android:layout_marginTop="@dimen/x32"/>
+                android:layout_height="@dimen/x220"
+                android:layout_marginTop="@dimen/x16"
+                android:contentDescription="@string/imageDesc"/>
 
             <LinearLayout
                 android:id="@+id/profileUselessOne"
@@ -59,6 +60,7 @@
                     android:layout_height="@dimen/x22"
                     android:textAlignment="textEnd"
                     android:src="@drawable/location"
+                    android:contentDescription="@string/imageDesc"
                     android:padding="@dimen/x4"/>
                 <TextView
                     android:id="@+id/profileLocation"
@@ -75,11 +77,11 @@
                 android:id="@+id/useLessThree"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@string/bio"
+                android:text="@string/bioStr"
                 android:layout_below="@id/profileUselessTwo"
                 android:layout_marginTop="@dimen/x22"
                 android:textStyle="bold"
-                android:textSize="@dimen/x16S"
+                android:textSize="@dimen/xs16"
                 android:fontFamily="sans-serif-condensed"
                 android:textColor="@color/black"
                 android:paddingLeft="@dimen/x16"/>
@@ -91,7 +93,7 @@
                 android:layout_marginLeft="@dimen/x16"
                 android:layout_below="@id/useLessThree"
                 android:layout_marginTop="@dimen/x4"
-                android:textSize="@dimen/x16S"
+                android:textSize="@dimen/xs16"
                 android:fontFamily="sans-serif"
                 android:ellipsize="end"
                 android:layout_marginRight="@dimen/x16"/>
