--- a/app/src/main/res/layout/creater_list_item.xml
+++ b/app/src/main/res/layout/creater_list_item.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/createrIv"
+        android:id="@+id/creatorIv"
         android:layout_width="@dimen/x128"
         android:layout_height="@dimen/x128"
         android:layout_marginLeft="@dimen/x16"
