--- a/app/src/main/res/menu/sort_by_tv.xml
+++ b/app/src/main/res/menu/sort_by_tv.xml
@@ -2,32 +2,31 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <group
-        android:checkableBehavior="single">
+    <group android:checkableBehavior="single">
 
         <item
             android:id="@+id/onTheAirTv"
             android:orderInCategory="10"
-            android:title="@string/on_the_air_str"
+            android:title="@string/onTheAirStr"
             app:showAsAction="never|collapseActionView" />
 
         <item
             android:id="@+id/popularTv"
             android:checked="true"
             android:orderInCategory="10"
-            android:title="@string/popular_str"
+            android:title="@string/popularStr"
             app:showAsAction="never|collapseActionView" />
 
         <item
             android:id="@+id/airingTodayTv"
             android:orderInCategory="10"
-            android:title="@string/airing_today_str"
+            android:title="@string/airingTodayStr"
             app:showAsAction="never|collapseActionView" />
 
         <item
             android:id="@+id/mostRatedTv"
             android:orderInCategory="10"
-            android:title="@string/top_rated_str"
+            android:title="@string/topRatedStr"
             app:showAsAction="never" />
     </group>
 </menu>
