--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,12 +4,9 @@
     <color name="colorPrimaryDark">#9b2a58</color>
     <color name="colorAccent">#212121</color>
     <color name="red">#ff0000</color>
-
     <color name="white">#FFFFFF</color>
     <color name="black">#000000</color>
     <color name="grey">#bdbdbd</color>
-
-    <color name="dark_green">#27ae60</color>
-    <color name="light_green">#B3C833</color>
-
+    <color name="darkGreen">#27ae60</color>
+    <color name="lightGreen">#B3C833</color>
 </resources>
