--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,26 +5,14 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="preferenceTheme">@style/PreferenceThemeOverlay</item>
     </style>
-
     <style name="AppTheme.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
-
-    <!--
-        <style name="MyHoloTheme" parent="@android:style/Theme.Holo">
-            <item name="android:actionOverflowButtonStyle">@style/OverFlow</item>
-        </style>
-        <style name="OverFlow" parent="@android:style/Widget.Holo.ActionButton.Overflow">
-            <item name="android:src">@drawable/baseline_unfold_more_white_18</item>
-        </style>
-     -->
-
-    <style name="AppTheme.nobar" parent="Theme.AppCompat.DayNight.NoActionBar"/>
-
+    <style name="AppTheme.noBar" parent="Theme.AppCompat.DayNight.NoActionBar"/>
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 </resources>
